--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="assets/css/jquery-ui.css" />
     <link type="text/css" rel="stylesheet" href="assets/codemirror/themes/material.css" />
     <link type="text/css" rel="stylesheet" href="assets/css/main.css" />
+    <link rel="manifest" href="/manifest.webmanifest">
     <script>
         // register ServiceWorker, remember to use absolute path!
         if (navigator.serviceWorker) {
