Add close button to sidebar
https://www.w3schools.com/howto/howto_js_collapse_sidebar.asp

--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
         </div>
     </div>
     <div class="sidebar" id=mySidenav>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="sidebar-title">Projects</div>
         <div class="projects"></div>
     </div>
