--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
         </div>
     </div>
     <div class="bg"></div>
+    <button class="openbtn" onclick="openNav()">&#9776; Open Sidebar</button>
     <div class="menu">
         <div class="menu-li add-newproject">
             <div class="material-icons">book</div>
